--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -92,7 +92,7 @@ header nav{
   }
   
   #dropdown-basic-button{
-     
+     display:block;
       background-color: transparent;
       color:black;
       margin-top:25px;
@@ -101,6 +101,18 @@ header nav{
 
  #dropdown-basic-button:hover{
      border:none;
+     font-weight: bold;
+ }
+
+ .drop-link{
+     text-decoration:none;
+     display:block;
+ }
+ 
+ .drop-link:hover{
+     text-decoration: none;
+     background-color:rgb(230, 228, 228);
+     color:black;
      font-weight: bold;
  }
 
