--- a/src/assets/css/NuevoUsuario.css
+++ b/src/assets/css/NuevoUsuario.css
@@ -298,7 +298,7 @@ table {
       display: block;
       font-size:1.1em;
       text-align: right;
-      width:100%;
+      width:100% !important;
       text-align: center;
     }
     
