--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1101,6 +1101,7 @@ letter-spacing: 0.8px;
 .table-dropbox{
   width: 88%;
   margin-left: 70px;
+  background-color: white;
 }
 
 .table-dropbox-th{
@@ -1109,6 +1110,7 @@ letter-spacing: 0.8px;
 
 
 .dropbox-cabecera{
+  background-color: white;
   margin-top:30px;
 }
 
@@ -1166,6 +1168,31 @@ width:60%;
   display: block;
   margin:auto;
 }
+
+
+/** SPINNER */
+
+.fp-container{
+  
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(128, 128, 128, 0.425);
+}
+#fp-container{
+  display: none;
+}
+
+.fp-container .fp-loader{
+  top: 30%;
+  left: 48%;
+  z-index: 1000;
+  position: absolute;
+
+}
+
 
 
   /* RESPONSIVE */ 
