--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -70,6 +70,7 @@ header nav{
     display:inline-flex;
     float: right;
     font-size:16px;
+    left : '-100%';
 }
 
 #logo {
@@ -246,6 +247,8 @@ header nav{
     display:none;
 }
 
+
+
 @media(max-width: 1334px){
 
     #menuvar{
@@ -260,6 +263,8 @@ header nav{
       /*  left:-100%;*/
         margin:0;
         position:fixed;
+        left:-100%;
+        ;
     }
 
     
@@ -337,6 +342,9 @@ header nav{
         background: rgba(230, 228, 228, 0.664);
     }
 
+    #logo{
+        display: none;
+    }
    
 }
 
