--- a/src/assets/css/mensajeria.css
+++ b/src/assets/css/mensajeria.css
@@ -342,6 +342,14 @@
 
 
 
+
+.link-responsive{
+    display: none;
+    width: calc(100%/3);
+    text-align: center;
+    margin-bottom: 12px;
+}
+
 /* PAGINATION */
 
 .pagination{
@@ -362,6 +370,18 @@
     border-color: grey;
 }
 
+@media(max-width:1324px){
+   
+
+.link-responsive{
+    display:inline-block;
+}
+
+.grid-mensajeria-col{
+   grid-template-rows:none;
+}
+
+}
 
 @media(max-width: 415px){
     .card-mensaje-novisto{
